Form elements page

--- a/src/components/benefits/benefits.pug
+++ b/src/components/benefits/benefits.pug
@@ -1,16 +1,16 @@
 mixin benefits
     .benefits(class=attributes.class)
-        img(src=require('./assets/images/comfort.svg'), alt="alt").benefits__svg
+        img(src=require('/assets/images/comfort.svg'), alt="alt").benefits__svg
         .benefits-comfort__text
             h3.benefits__text-name Комфорт
             p.benefits__text-description Шумопоглощающие стены
     .benefits
-        img(src=require('./assets/images/location.svg'), alt="alt").benefits__svg
+        img(src=require('/assets/images/location.svg'), alt="alt").benefits__svg
         .benefits-location__text
             h3.benefits__text-name Удобство
             p.benefits__text-description Окно в каждой из спален
     .benefits
-        img(src=require('./assets/images/whatshot.svg'), alt="alt").benefits__svg
+        img(src=require('/assets/images/whatshot.svg'), alt="alt").benefits__svg
         .benefits-location__text
             h3.benefits__text-name Уют
             p.benefits__text-description Номер оснещён камином
