--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -1,6 +1,6 @@
 include ../../components/like-button/like-button.pug
 
-mixin comment(src=require('./assets/images/user.png'), name='Мурад Сарафанов', date='5 дней назад', text='Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.', value='12')
+mixin comment(src=require('/assets/images/user.png'), name='Мурад Сарафанов', date='5 дней назад', text='Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.', value='12')
     .comment(class=attributes.class) 
         .comment__user
             img.comment__image(src=src alt="murad-sarafanov")
