--- a/src/pages/website/__room-details/room-details.pug
+++ b/src/pages/website/__room-details/room-details.pug
@@ -26,7 +26,7 @@ include ../../../components/comment/comment.pug
                                         h3.room__title Отзывы посетителей номера
                                         span.room__title-add 2 отзыва
                                 +comment(class='room__comment-item')
-                                +comment(require('./assets/images/user2.png'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент', '2')(class='room__comment-item')
+                                +comment(require('/assets/images/user2.png'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент', '2')(class='room__comment-item')
 
                         .room__additional
                                 .room__rules
