--- a/src/components/__cards/__registration/registration.scss
+++ b/src/components/__cards/__registration/registration.scss
@@ -26,7 +26,7 @@
   }
 
   &__radio {
-    margin-bottom: 0.8rem;
+    margin-bottom: 1.2rem;
   }
 
   &__suptitle {
@@ -34,10 +34,11 @@
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
+    margin-bottom: 5px;
   }
 
   &__date {
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.5rem;
   }
 
   &__data {
@@ -49,7 +50,7 @@
   }
 
   &__toggle {
-    margin-bottom: 1.7rem;
+    margin-bottom: 1.5rem;
   }
 
   &__btn {
