--- a/src/components/buttons/button-no-border.pug
+++ b/src/components/buttons/button-no-border.pug
@@ -1,4 +1,4 @@
 mixin buttonNoBorder(text='click me')
-    .button(class=attributes.class)
-        button(type='submit').button__submit.button__submit--no-border 
+    .button-no-border(class=attributes.class)
+        button(type='submit').button-no-border__inp
             span= text
