--- a/src/components/buttons/button-small.pug
+++ b/src/components/buttons/button-small.pug
@@ -1,3 +1,3 @@
 mixin buttonSmall(text='click me')
-    .button-small(class=attributes.class)
-        button(type='submit').button-small__submit= text
+    .button-small
+        button(type='submit').button-small__submit(class=attributes.class)= text
