--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -1,3 +1,11 @@
+.rate {
+    &__button {
+        height: 24px;
+        width: 24px;
+        cursor: pointer;
+    }
+}
+
 .products__rate {
     display: flex;
     justify-content: center;
