--- a/src/pages/UI-kit/__form-elements/form-elements.pug
+++ b/src/pages/UI-kit/__form-elements/form-elements.pug
@@ -17,16 +17,9 @@ include ../../../components/dropdown/dropdown-room.pug
 include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons
 include ../../../components/benefits/benefits.pug
-
-
-
 include ../../../components/pagination/pagination.pug
-
 include ../../../components/buttons/button-big.pug
-//include ../../../components/buttons/button-no-border.pug
 include ../../../components/buttons/button-small.pug
-//include ../../../components/buttons/button-transparent.pug
-
 include ../../../components/bullet-list/bullet-list.pug
 include ../../../components/comment/comment.pug
 
@@ -105,7 +98,7 @@ html(lang="ru")
                     .elements-one__flex
                         .elements-one__block
                             h3.elements-one__upper-text1 rich checkbox buttons
-                            +rich-checkbox(class='elements-one__rich-textbox')
+                            +rich-checkbox(class='elements-one__rich-text')
                     .elements-one__flex
                         .elements-one__block
                             h3.elements-one__upper-text1 bullet list
