--- a/src/pages/website/__search-room/search-room.scss
+++ b/src/pages/website/__search-room/search-room.scss
@@ -1,11 +1,11 @@
-@import '../../../components/pagination/pagination.scss';
-@import '../../../components/filter-date-dropdown/filter-date-dropdown.scss';
-@import '../../../components/range-slider/range-slider.scss';
-@import '../../../components/checkbox-list/checkbox-list.scss';
-@import '../../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss';
-@import '../../../components/dropdown/dropdown.scss';
-@import '../../../components/expandable-checkbox-list/expandable-checkbox-list.scss';
-@import '../../../components/__cards/__products/products.scss';
+@import "../../../components/pagination/pagination.scss";
+@import "../../../components/filter-date-dropdown/filter-date-dropdown.scss";
+@import "../../../components/range-slider/range-slider.scss";
+@import "../../../components/checkbox-list/checkbox-list.scss";
+@import "../../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
+@import "../../../components/dropdown/dropdown.scss";
+@import "../../../components/expandable-checkbox-list/expandable-checkbox-list.scss";
+@import "../../../components/__cards/__products/products.scss";
 
 .search {
   display: flex;
