--- a/src/pages/UI-kit/__form-elements/form-elements.scss
+++ b/src/pages/UI-kit/__form-elements/form-elements.scss
@@ -12,19 +12,16 @@
 @import "../../../components/buttons/button-small";
 @import "../../../components/buttons/button-transparent";
 @import "../../../components/buttons/button-no-border";
-@import '../../../components/expandable-checkbox-list/expandable-checkbox-list.scss';
+@import "../../../components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "../../../components/rich-checkbox-buttons/rich-checkbox-buttons";
-@import '../../../components/toggle/toggle.scss';
-@import '../../../components/like-button/like-button.scss';
-@import '../../../components/rate-button/rate-button.scss';
-@import '../../../components/pagination/pagination.scss';
-@import '../../../components/range-slider/range-slider.scss';
+@import "../../../components/toggle/toggle.scss";
+@import "../../../components/like-button/like-button.scss";
+@import "../../../components/rate-button/rate-button.scss";
+@import "../../../components/pagination/pagination.scss";
+@import "../../../components/range-slider/range-slider.scss";
 @import "../../../components/benefits/benefits";
-//@import '../../../components/buttons/buttons.scss';
-
-
-@import '../../../components/bullet-list/bullet-list.scss';
-@import '../../../components/comment/comment.scss';
+@import "../../../components/bullet-list/bullet-list.scss";
+@import "../../../components/comment/comment.scss";
 
 .elements-one {
   max-width: 320px;
