dropdown room refactor

--- a/src/components/dropdown/dropdown-room.pug
+++ b/src/components/dropdown/dropdown-room.pug
@@ -1,6 +1,6 @@
 mixin dropdown-room
     .dropdown-room
-        button(type="submit" name="dropdown-field-room").dropdown-type Удобства номера
+        button(type="submit" name="dropdownRoom").dropdown-type Удобства номера
         i.material-icons.material-icons--color50.material-icons--bold.dropdown__icon expand_more
         .dropdown-guest(hidden)
             ul.dropdown-guest__list
