dropdown room refactoring

--- a/src/pages/website/__search-room/search-room.pug
+++ b/src/pages/website/__search-room/search-room.pug
@@ -5,7 +5,8 @@ include ../../../components/range-slider/range-slider.pug
 include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../../components/checkbox-list/checkbox-list.pug
 include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
-include ../../../components/dropdown/dropdown-room.pug
+//include ../../../components/dropdown/dropdown-room.pug
+include ../../../components/dropdown-room/dropdown-room
 include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 
 .inner-container
