--- a/src/pages/website/__search-room/search-room.scss
+++ b/src/pages/website/__search-room/search-room.scss
@@ -3,7 +3,8 @@
 @import "../../../components/range-slider/range-slider.scss";
 @import "../../../components/checkbox-list/checkbox-list.scss";
 @import "../../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss";
-@import "../../../components/dropdown/dropdown.scss";
+//@import "../../../components/dropdown/dropdown.scss";
+@import "../../../components/dropdown-room/dropdown-room";
 @import "../../../components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "../../../components/__cards/__products/products.scss";
 
