--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,14 +5,14 @@
 @import '../components/__headers&footers/__header/header.scss';
 @import '../components/__headers&footers/__footer/footer.scss';
 
-@import '../pages/UI-kit/__colors-type/colors-type';
-@import '../pages/UI-kit/__form-elements/form-elements';
+//@import '../pages/UI-kit/__colors-type/colors-type';
+//@import '../pages/UI-kit/__form-elements/form-elements';
 
 @import '../pages/website/__search-room/search-room.scss';
-@import '../pages/website/__landing/landing.scss';
-@import '../pages/website/__room-details/room-details.scss';
-@import '../pages/website/__registration/registration.scss';
-@import '../pages/website/__login/login.scss';
+//@import '../pages/website/__landing/landing.scss';
+//@import '../pages/website/__room-details/room-details.scss';
+//@import '../pages/website/__registration/registration.scss';
+//@import '../pages/website/__login/login.scss';
 
 *,
 *::after,
