--- a/src/pages/website/__search-room/search-room.pug
+++ b/src/pages/website/__search-room/search-room.pug
@@ -15,7 +15,7 @@ include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pu
             h3.search__information-title даты пребывания в отеле
             +filterDate(class='search__information-filter')
             h3.search__information-title гости
-            +dropdown(class='search__information-dropdown')
+            //+dropdown(class='search__information-dropdown')
             h3.search__information-title Диапазон цены
             +range(class='search__information-range')
             p.search__information-text Стоимость за сутки пребывания в номере
