dropdown with Class and global refactoring

--- a/src/components/__cards/__login/login.scss
+++ b/src/components/__cards/__login/login.scss
@@ -1,5 +1,6 @@
 @import '../../text-field/text-field.scss';
 @import '../../buttons/button-transparent.scss';
+@import "../../buttons/button-big";
 @import '../../../style/layout/mixins/card.scss';
 @import '../../../style/layout/variables';
 
