--- a/src/components/__cards/__room-search/room-search.scss
+++ b/src/components/__cards/__room-search/room-search.scss
@@ -3,6 +3,7 @@
 @import '../../../style/layout/mixins/card.scss';
 @import '../../../components/buttons/button-big';
 @import '../../../style/layout/variables';
+@import "../../dropdown/dropdown";
 
 
 .card-search {
