--- a/src/components/dropdown-room/dropdown-room.pug
+++ b/src/components/dropdown-room/dropdown-room.pug
@@ -1,5 +1,5 @@
 mixin dropdown-room
-    .dropdown-room
+    .dropdown-room(class=attributes.class)
         button(type="submit" name="dropdownRoom").dropdown-room__type Удобства номера
             i.material-icons.material-icons--color50.material-icons--bold.dropdown-room__icon expand_more
         .dropdown-room__guest
