--- a/src/components/filter-date-dropdown/filter-date-dropdown.pug
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.pug
@@ -1,4 +1,4 @@
 mixin filterDate
     form.filter-date(class=attributes.class)
-        input(type="text" placeholder='ДД.ММ.ГГГГ' spellcheck="false").filter-date__dropdown.datepicker-one
+        input(type="text" placeholder='ДД.ММ.ГГГГ' spellcheck="false" readonly).filter-date__dropdown.datepicker-one
         i.material-icons.material-icons--color50.material-icons--bold.filter-date__icon expand_more
