--- a/src/components/masked-text-field/masked-text-field.pug
+++ b/src/components/masked-text-field/masked-text-field.pug
@@ -1,3 +1,3 @@
 mixin maskedTextField( text='дд.мм.гггг' )
     .masked-text-field(class=attributes.class)
-        input(type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off" max="1979-12-31").masked-text-field__input.datepicker-one-el
+        input(type="text" name="date" placeholder="дд.мм.гггг" autocomplete="off" max="1979-12-31" readonly).masked-text-field__input.datepicker-one-el
