--- a/src/pages/UI-kit/__form-elements/form-elements.pug
+++ b/src/pages/UI-kit/__form-elements/form-elements.pug
@@ -13,7 +13,7 @@ include ../../../components/rate-button/rate-button.pug
 include ../../../components/range-slider/range-slider.pug
 include ../../../components/buttons/button-transparent
 include ../../../components/buttons/button-no-border
-include ../../../components/dropdown/dropdown-room.pug
+include ../../../components/dropdown-room/dropdown-room
 include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons
 include ../../../components/benefits/benefits.pug
