--- a/src/pages/website/__landing/landing.scss
+++ b/src/pages/website/__landing/landing.scss
@@ -1,4 +1,4 @@
-@import '/components/__cards/__room-search/room-search.scss';
+@import '../../../components/__cards/__room-search/room-search.scss';
 
 .landing {
     width: 100vw;
