--- a/src/components/__cards/__products/products.scss
+++ b/src/components/__cards/__products/products.scss
@@ -1,9 +1,11 @@
 @import '../../../style/layout/variables';
+@import "src/components/rate-button/rate-button";
 
 .products {
   background: #fff;
   filter: drop-shadow(0 10px 20px rgba(31, 32, 65, 0.05));
   border-radius: 4px;
+  width: fit-content;
 
   &:hover {
     .products__nav--left {
