--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,7 @@
 
 @import '../pages/UI-kit/__colors-type/colors-type';
 @import '../pages/UI-kit/__form-elements/form-elements';
+@import "../pages/UI-kit/__cards/cards";
 
 @import '../pages/website/__search-room/search-room.scss';
 @import '../pages/website/__landing/landing.scss';
